# RAG-View-A-Production-Grade-Graph-Based-RAG-System

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LINKEDIN_SERIES.md  Makefile  README.md  docker-compose.yml  ingest.py  pyproject.toml
docs/: PRD.md
reports/: FINAL_REPORT.md  benchmark_report.csv  report1.md  report10.md  report11.md  report12.md  report13.md  report14.md  report15.md  report16.md  report17.md  report18.md  report19.md  report2.md  report20.md  report21.md  report22.md  report23.md  report24.md  report25.md  report3.md  report4.md  report5.md  report6.md  report7.md  report8.md  report9.md
scripts/: bulk_comment_edit.py  bulk_edit_comments.ps1  diagnostic_test.py  fix_chromadb.py  full_pipeline_fix.py  merge_duplicates.py  strip_dates.ps1  trace_ask.py  verify.py
src/: __init__.py  api.py  benchmark.py  community_store.py  components.py  context_assembler.py  dashboard.py  database.py  embedder.py  extractor.py  graph_hybrid_retriever.py  graph_retriever.py  graph_store.py  graph_updater.py  health_check.py  hybrid_store.py  pipeline.py  processing.py  qa.py  query_linker.py  resolver.py  restaurant_json_loop.py  retriever.py  scorer.py  styles.py  verifier.py
tests/: demo_phase1.py  demo_phase2.py  demo_phase3.py  test_api.py  test_community_store.py  test_context_assembler.py  test_entity_resolution.py  test_extractor.py  test_graph_embeddings.py  test_graph_hybrid_retriever.py  test_graph_ingestion.py  test_graph_retriever.py  test_graph_updater.py  (+3 more)
(+4 files in other folders)
