[tool.poetry]
name = "rag-view"
version = "0.1.0"
description = "A graph-powered document intelligence platform"
authors = ["Shadwal Singh <shadwal@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
neo4j = "^5.19.0"
redis = "^5.0.3"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.2.2"
google-genai = "^2.0.1"
slowapi = "^0.1.9"
chromadb = "^1.5.0"
rank-bm25 = "^0.2.2"
streamlit = "^1.32.0"
pyvis = "^0.3.2"
requests = "^2.31.0"
pypdf = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
ruff = "^0.3.5"
pre-commit = "^3.7.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 500
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
